Apply suggestions from code review
Co-authored-by: Lasse Westh-Nielsen <lassewesth@gmail.com>